--- a/src/main/webapp/WEB-INF/pages/users.html
+++ b/src/main/webapp/WEB-INF/pages/users.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<!--<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>-->
 <html lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Users</title>
 </head>
 <body>
 <div align="center">
     <h2>Users Manager</h2>
-    <form method="get" action="search">
-        <input type="text" name="keyword"/>
-        <input type="submit" value="Search"/>
-    </form>
     <h3><a href="/new">New User</a></h3>
     <table border="1" cellpadding="5">
         <tr>
@@ -20,7 +15,9 @@
             <th width="150">First Name</th>
             <th width="150">Last Name</th>
             <th width="150">E-mail</th>
-            <th width="150">Action</th>
+            <th width="100">Edit</th>
+            <th width="100">Delete</th>
+
         </tr>
         <th:block th:each="msg : ${users}">
             <tr>
@@ -28,13 +25,15 @@
                 <td width="150" th:text="${msg.getFirstName()}"></td>
                 <td width="150" th:text="${msg.getLastName()}"></td>
                 <td width="150" th:text="${msg.getEmail()}"></td>
+                <td><a th:href="@{/{id}/edit(id=${msg.getId()})}">Edit</a></td>
                 <td>
-                    <p><a href="/edit?id=${user.id}">Edit</a></p>
-                    <p><a href="/delete?id=${user.id}">Delete</a></p>
+                    <form th:method="DELETE" th:action="@{/{id}(id=${msg.getId()})}">
+                        <input type="submit" value="Delete"/>
+                    </form>
                 </td>
             </tr>
+        </th:block>
     </table>
-    </th:block>
 </div>
 </body>
 </html>
