--- a/src/main/webapp/WEB-INF/pages/edit.html
+++ b/src/main/webapp/WEB-INF/pages/edit.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 <form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
-    <label for="firstName">Enter First Name: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/>
-    <label for="lastName">Enter Last Name: </label>
-    <input type="text" th:field="*{lastName}" id="lastName"/>
+    <label for="name">Enter name: </label>
+    <input type="text" th:field="*{name}" id="name"/>
+
     <label for="email">Enter e-mail: </label>
     <input type="email" th:field="*{email}" id="email"/>
+
+    <label for="password">Enter password: </label>
+        <input type="text" th:field="*{password}" id="password"/>
     <br/>
     <input type="submit" value="Update!"/>
 </form>
