--- a/src/main/webapp/WEB-INF/pages/new.html
+++ b/src/main/webapp/WEB-INF/pages/new.html
@@ -7,6 +7,9 @@
 <body>
 <h3>New User</h3>
 <form th:method="POST" th:action="@{/}" th:object="${user}">
+    <label for="username">Enter Username: </label>
+    <input type="text" th:field="*{username}" id="username"/>
+
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{name}" id="name"/>
 
@@ -16,7 +19,16 @@
     <label for="password">Enter password: </label>
     <input type="text" th:field="*{password}" id="password"/>
     <br/>
+    <label>Roles:
+        <input type="checkbox" name="allRoles"
+               th:each="role : ${allRoles}"
+               th:text="${role.getRole()}"
+               th:value="${role.getRole()}"
+
+        />
+    </label>
+
     <input type="submit" value="Create!"/>
-</form>
+    </form>
 </body>
 </html>
