--- a/src/main/webapp/WEB-INF/pages/edit.html
+++ b/src/main/webapp/WEB-INF/pages/edit.html
@@ -5,7 +5,7 @@
     <title>Edit User</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+<form th:method="POST" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="username">Enter Username: </label>
     <input type="text" th:field="*{username}" id="username"/>
 
@@ -18,6 +18,14 @@
     <label for="password">Enter password: </label>
         <input type="text" th:field="*{password}" id="password"/>
     <br/>
+    <label>Roles:
+        <input type="checkbox" name="allRoles"
+               th:each="role : ${allRoles}"
+               th:text="${role.getRole()}"
+               th:value="${role.getRole()}"
+        />
+    </label>
+
     <input type="submit" value="Update!"/>
 </form>
 </body>
