--- a/src/main/webapp/WEB-INF/pages/hello.html
+++ b/src/main/webapp/WEB-INF/pages/hello.html
@@ -10,6 +10,7 @@
     <th:block th:each="msg : ${messages}">
         <h1 th:text="${msg}"></h1>
     </th:block>
+    <a th:href="@{/login}">Login</a>
 </div>
 </body>
 </html>
