информация о пользователе отображается редиректы настроены вроде, все...

--- a/src/main/webapp/WEB-INF/pages/hello.html
+++ b/src/main/webapp/WEB-INF/pages/hello.html
@@ -10,6 +10,7 @@
     <th:block th:each="msg : ${messages}">
         <h1 th:text="${msg}"></h1>
     </th:block>
+    <p>по умолчанию: пользователь admin, пароль admin</p>
     <a th:href="@{/login}">Login</a>
 </div>
 </body>
