--- a/src/main/webapp/WEB-INF/pages/user.html
+++ b/src/main/webapp/WEB-INF/pages/user.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-    <h3>Welcome <span th:text="${authenticated}"/></h3>
+<h2>Welcome</h2>
 
-    Authenticated username:
-    <div sec:authentication="name"></div>
+<h3>Authenticated username details:</h3>
+<br>
 
-<!--    <th:block th:each="msg : ${user}">
-        <p th:text="${msg.getId()}"></p>
+<table >
+    <tr align="left">
+        <th>ID</th>
+        <td th:text="${user.getId()}"></td>
+    </tr>
+    <tr>
+        <th>Username</th>
+        <td th:text="${user.getUsername()}"></td>
+    </tr>
+    <tr>
+        <th>Name</th>
+        <td th:text="${user.getName()}"></td>
+    </tr>
+    <tr>
+        <th>E-mail</th>
+        <td th:text="${user.getEmail()}"></td>
+    </tr>
+    <tr>
+        <th>Roles</th>
+        <td th:text="${user.getRoles()}"></td>
+    </tr>
+</table>
 
-    </th:block>-->
+<br>
+<br>
+<a th:href="@{/logout}">Logout</a>
 
 </body>
 </html>
