--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -8,8 +8,8 @@
 <body>
 <div>
     <form method="post" action="/login">
-        <input name="j_username"/>
-        <input name="j_password"/>
+        Username:<input name="j_username"/><br>
+        Password:<input name="j_password"/><br><br>
         <input type="submit"/>
     </form>
 </div>
