1. Вынеси бизнес логику из контроллеров в сервис (например, сбор ролей в roleSet) - вывел в userservice, назвал newroles 2. Добавь модификаторы доступа к методам репозитория и полям UserService - сделал private 3. мелкие правки, типа ссылок на добавление и редактирование через /admin/* (вроде, ничего не сломал?..)

--- a/src/main/webapp/WEB-INF/pages/new.html
+++ b/src/main/webapp/WEB-INF/pages/new.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>New User</h3>
-<form th:method="POST" th:action="@{/}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin}" th:object="${user}">
     <label for="username">Enter Username: </label>
     <input type="text" th:field="*{username}" id="username"/>
 
