--- a/src/main/webapp/WEB-INF/pages/admin.html
+++ b/src/main/webapp/WEB-INF/pages/admin.html
@@ -8,7 +8,7 @@
 <body>
 <div align="center">
     <h2>Users Manager</h2>
-    <h3><a href="/new">New User</a></h3>
+    <h3><a href="/admin/new">New User</a></h3>
     <table border="1" cellpadding="5">
         <tr>
             <th width="150">ID</th>
@@ -29,9 +29,9 @@
                 <td th:text="${msg.getEmail()}"></td>
                 <td th:text="${msg.getRoles()}"></td>
                 <td th:text="${msg.getPassword()}"></td>
-                <td><a th:href="@{/{id}/edit(id=${msg.getId()})}">Edit</a></td>
+                <td><a th:href="@{/admin/edit/{id}(id=${msg.getId()})}">Edit</a></td>
                 <td>
-                    <form th:method="DELETE" th:action="@{/{id}(id=${msg.getId()})}">
+                    <form th:method="DELETE" th:action="@{/admin/{id}(id=${msg.getId()})}">
                         <input type="submit" value="Delete"/>
                     </form>
                 </td>
