--- a/src/main/webapp/WEB-INF/pages/edit.html
+++ b/src/main/webapp/WEB-INF/pages/edit.html
@@ -5,7 +5,7 @@
     <title>Edit User</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+<form th:method="PATCH" th:action="@{/admin/edit/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="username">Enter Username: </label>
     <input type="text" th:field="*{username}" id="username"/>
 
